# lyra

./: README.md
lyra_driver/: CMakeLists.txt  README.md  package.xml  package.xmldisabled
lyra_driver/launch/: aion_leap.launch  aion_polaris.launch  lyra_namespace.launch
lyra_driver/src/: aion_leap.cpp  aion_polaris.cpp  lyra.cpp  lyra_drone.cpp
lyra_gz/: CMakeLists.txt  README.md  package.xml  package.xmldisabled
lyra_gz/launch/: beerworld.launch  bugworld.launch  doorworld.launch  handworld.launch  lyra.launch.py  lyra_spawn_tmp.py
lyra_gz/models/: hand_module.urdf  hand_on_aion.xacro  modularized_hand.urdf
lyra_gz/models/hand_on_wheels/: model.config  model.sdf
lyra_gz/models/mpl_haptix_right_forearm/: model.sdf  model.urdf
lyra_gz/models/quadcopter/: quadrotor.gazebo.xacro  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro
lyra_gz/world/: beerworld.world  doorworld.world
lyra_msg/: CMakeLists.txt  package.xml
lyra_msg/msg/: HandContact.msg  HandMotion.msg
